<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/review_back"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:background="@drawable/shape_gradient"
            android:src="@drawable/arrow_right" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center|left"
            android:layout_weight="10"
            android:background="@drawable/shape_gradient"
            android:gravity="center"
            android:text="@string/review"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/review_finish"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/review_surplus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/review_words"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/review_means"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/review_remember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="10"
            android:background="@drawable/shape_gradient"
            android:text="@string/remember"
            android:textSize="20dp" />

        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" />

        <Button
            android:id="@+id/review_toast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="3"
            android:background="@drawable/shape_gradient"
            android:text="@string/spelling_toast"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/review_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="10"
            android:background="@drawable/shape_gradient"
            android:text="@string/per_word" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1" />

        <Button
            android:id="@+id/review_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="10"
            android:background="@drawable/shape_gradient"
            android:text="@string/next_word" />
    </LinearLayout>
</LinearLayout>