<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReviewPage.SpellingActivity"
    android:background="#efefef">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/spelling_back"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center|left"
            android:layout_weight="1"
            android:background="@drawable/shape_gradient"
            android:src="@drawable/arrow_right" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center|left"
            android:layout_weight="10"
            android:background="@drawable/shape_gradient"
            android:gravity="center"
            android:text="@string/spelling"
            android:textColor="#fff"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/spelling_speled"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/spelling_surplus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/spelling_mean"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/spelling_spel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/spelling_word"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/spelling_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="5"
            android:layout_marginBottom="5dp"
            android:background="@drawable/cic_button_bg"
            android:textColor="#424242"
            android:gravity="center"
            android:text="@string/check"
            android:textSize="20dp" />

        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/spelling_toast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/cic_button_bg"
            android:textColor="#424242"
            android:gravity="center"
            android:text="@string/spelling_toast"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/spelling_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="10"
            android:background="@drawable/cic_button_bg"
            android:layout_marginBottom="10dp"
            android:textColor="#424242"
            android:text="@string/per_word"
            android:textSize="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/spelling_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_weight="10"
            android:background="@drawable/cic_button_bg"
            android:textColor="#424242"
            android:text="@string/next_word"
            android:textSize="20dp" />
    </LinearLayout>
</LinearLayout>